QPID-168 Applying an amended version of Suran's patch for this JIRA, expanding the .bat file's functionality to be closer to the bash scripts
git-svn-id: https://svn.eu.apache.org/repos/asf/incubator/qpid/trunk@668692 13f79535-47bb-0310-9956-ffa450edef68